# numberwang-vst

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTES.md  README.md  build.ps1  build.sh  dev.sh
.claude/commands/: release.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.h
Source/UI/: app.js  index.html  style.css
Source/archive/: PluginEditor_cpp.cpp  PluginEditor_cpp.h
docs/: handoff-andy.md
